k8s/overlays/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cemp-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: cemp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cemp-api-service
                port:
                  number: 80
